# metanoia

./: .gitignore  GEMINI.md  README.md  SETTINGS_IMPLEMENTATION.md  build.zig  build.zig.zon  debug_engine_speed.py  greek_test.txt  inspect_mlx_model.py  inspect_qwen_methods.py  pyproject.toml  sample.html  start_server.sh
assets/themes/: tokyo-night.css
data/: bhs_gen_1_1.txt  config.json  nkjv_john_3_16.txt  tts_req.json  voices.json
mobile/: README.md  settings.gradle.kts
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/bytecats/metanoia/: MainActivity.kt
mobile/app/src/main/java/com/bytecats/metanoia/bible/: BibleManager.kt
mobile/app/src/main/java/com/bytecats/metanoia/llm/: LLMManager.kt
mobile/app/src/main/java/com/bytecats/metanoia/settings/: SettingsManager.kt
mobile/app/src/main/java/com/bytecats/metanoia/tts/: TTSManager.kt
mobile/app/src/main/java/com/bytecats/metanoia/ui/components/: SharedComponents.kt
mobile/app/src/main/java/com/bytecats/metanoia/ui/screens/: BibleScreen.kt  CollectionScreen.kt  DataManagementScreen.kt  ExperimentalHub.kt  GraniteLabScreen.kt  InsightsRepositoryScreen.kt  LibraryStatsScreen.kt  MainMenu.kt  SettingsScreens.kt  TableInspectorScreen.kt  VoiceLabScreen.kt
mobile/app/src/main/java/com/bytecats/metanoia/ui/theme/: Theme.kt
mobile/app/src/main/java/com/bytecats/metanoia/viewmodel/: MainViewModel.kt
mobile/app/src/main/res/drawable/: ic_metanoia_transform.xml
mobile/app/src/main/res/values/: google_fonts_certs.xml  strings.xml  themes.xml
mobile/app/src/test/java/com/bytecats/metanoia/: BibleConstantsTest.kt
src/: bible_db.zig  gtk.zig  main.zig  ollama_client.zig  root.zig  scraper_client.zig  test_db.zig  tts_client.zig
src/services/: llm_engine.zig  network_discovery.zig  tts_engine.zig
src/tests/: network_discovery_test.zig  settings_test.zig
src/ui/: settings_dialog.zig  settings_test.zig
src/ui/components/: header.zig  reader.zig  search.zig  sidebar.zig  status_bar.zig
static/: index.html
tools/: analyze_segments.py  cache_all.py  cache_james.py  cache_nt_interlinear.py  cache_ot_interlinear.py  check_duration.py  check_duration_sf.py  convert_for_mobile.py  create_perfect_roumie.py  debug_transcription.py  debug_transcription_v2.py  download_mlx_models.py  fill_interlinear.py  high_quality_transcribe.py  interlinear_scraper.py  lexicon_scraper.py  mlx_engine.py  populate_metadata.py  recover_missing.py  run_tts_server.sh  scraper.py  test_cp.py  torch_engine.py  transcribe.py  trim_and_transcribe.py  tts_server.py  tts_server_fix.txt
